--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,9 @@
     "scripts": {
         "dev": "tsx watch src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js",
+        "start": "tsx src/index.ts",
         "db:push": "prisma db push",
+        "db:migrate": "prisma migrate deploy",
         "db:studio": "prisma studio",
         "db:seed": "tsx prisma/seed.ts"
     },
