--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-firebase/app": "^23.8.3",
+    "@react-native-firebase/auth": "^23.8.3",
     "@react-navigation/bottom-tabs": "^7.9.1",
     "@react-navigation/native": "^7.1.27",
     "@react-navigation/native-stack": "^7.9.1",
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
-    "expo-firebase-recaptcha": "^2.3.1",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
-    "firebase": "^12.7.0",
+    "firebase": "^12.8.0",
     "lucide-react-native": "^0.562.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
