--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy AfterHour
+name: Deploy Clubin
 
 on:
   push:
@@ -22,75 +22,44 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push backend
         uses: docker/build-push-action@v5
         with:
           context: ./backend
           push: true
           tags: |
-            kshitijgupta2/afterhour-backend:latest
-            kshitijgupta2/afterhour-backend:${{ github.sha }}
+            kshitijgupta2/clubin-backend:latest
+            kshitijgupta2/clubin-backend:${{ github.sha }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # Build Admin and Scanner, then deploy to GitHub Pages
-  build-and-deploy:
+  # Build and push frontend Docker image
+  build-frontend:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          node-version: '20'
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Build Admin
-      - name: Install admin dependencies
-        working-directory: ./admin
-        run: npm ci
-
-      - name: Build admin
-        working-directory: ./admin
-        env:
-          VITE_API_URL: https://afterhour-backend-latest.onrender.com/api
-        run: npm run build
-
-      # Build Scanner
-      - name: Install scanner dependencies
-        working-directory: ./scanner
-        run: npm ci
-
-      - name: Build scanner
-        working-directory: ./scanner
-        env:
-          VITE_API_URL: https://afterhour-backend-latest.onrender.com/api
-        run: npm run build
-
-      # Combine outputs
-      - name: Prepare deployment folder
-        run: |
-          mkdir -p ./deploy/admin
-          mkdir -p ./deploy/scanner
-          cp -r ./admin/dist/* ./deploy/admin/
-          cp -r ./scanner/dist/* ./deploy/scanner/
-          echo '<!DOCTYPE html><html><head><title>AfterHour</title><style>body{font-family:system-ui;display:flex;justify-content:center;align-items:center;height:100vh;margin:0;background:#0a0a0a;color:#fff;flex-direction:column;gap:20px}a{color:#a855f7;font-size:1.5rem;text-decoration:none;padding:15px 30px;border:2px solid #a855f7;border-radius:10px}a:hover{background:#a855f7;color:#fff}</style></head><body><h1>AfterHour Portals</h1><a href="admin/">Admin Panel</a><a href="scanner/">Scanner Portal</a></body></html>' > ./deploy/index.html
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
-
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Build and push frontend
+        uses: docker/build-push-action@v5
         with:
-          path: ./deploy
+          context: .
+          file: ./frontend.Dockerfile
+          push: true
+          tags: |
+            kshitijgupta2/clubin-frontend:latest
+            kshitijgupta2/clubin-frontend:${{ github.sha }}
+          build-args: |
+            VITE_API_URL=https://clubin.info/api
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
