fix: nginx routing for root path

--- a/nginx.conf
+++ b/nginx.conf
@@ -6,10 +6,12 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml;
 
-    # Root landing page
-    location = / {
-        root /usr/share/nginx/html;
-        index index.html;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Landing page
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
     # Admin app
