--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,11 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Allow large file uploads (videos up to 100MB)
+        client_max_body_size 100M;
+        proxy_read_timeout 300s;
+        proxy_connect_timeout 75s;
     }
 
     # Health check endpoint
