--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,8 @@
     "expo": "~54.0.31",
     "expo-av": "~16.0.8",
     "expo-blur": "~15.0.8",
+    "expo-constants": "~18.0.13",
+    "expo-file-system": "~19.0.21",
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
     "expo-sharing": "~14.0.8",
