Update app branding: new logo, app name change to Clubin, and UI improvements
- Updated app name from AfterHour to Clubin in app.json
- Replaced app icon, adaptive-icon, and favicon with new Clubin logo
- Added Android-specific top padding for onboarding and login screens
- Updated ConfirmationScreen to show app icon instead of text logo
- Added clubin-logo-dark.png asset
- Removed emoji from ticket confirmation page

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "AfterHour",
+    "name": "Clubin",
     "slug": "clubin",
     "version": "1.0.0",
     "orientation": "portrait",
